<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- Use version-maven-plugin to update version -->
	<!-- 1. mvn versions:set -DnewVersion=1.0.1-SNAPSHOT -->
	<!-- 2. Review the change -->
	<!-- 3. mvn versions:commit or mvn versions:revert -->

	<groupId>com.github.pointbre</groupId>
	<artifactId>asyncer</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>asyncer</name>
	<packaging>pom</packaging>

	<modules>
		<module>asyncer-core</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>

		<reactor.version>2022.0.12</reactor.version>
		<failsafe.version>3.3.2</failsafe.version>
		<lombok.version>1.18.30</lombok.version>
		<findbugs.version>3.0.2</findbugs.version>
		<slf4j.version>2.0.9</slf4j.version>
		<junit5.version>5.10.1</junit5.version>
		<mockito.version>5.6.0</mockito.version>
		<cucumber.version>7.14.0</cucumber.version>
		<awaitility.version>4.2.0</awaitility.version>
	</properties>

	<url>https://github.com/pointbre/asyncer</url>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/pointbre/asyncer/issues</url>
	</issueManagement>

	<inceptionYear>2023</inceptionYear>
	<organization>
		<name>Lucas Kim</name>
		<url>https://github.com/pointbre</url>
	</organization>

	<developers>
		<developer>
			<id>pointbre</id>
			<name>Lucas Kim</name>
			<email>pointbre@gmail.com</email>
			<timezone>Pacific/Auckland</timezone>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/pointbre/asyncer</url>
		<connection>scm:git:git://github.com/pointbre/asyncer.git</connection>
		<developerConnection>scm:git:git@github.com:pointbre/asyncer.git</developerConnection>
	</scm>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-bom</artifactId>
				<version>${reactor.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>dev.failsafe</groupId>
				<artifactId>failsafe</artifactId>
				<version>${failsafe.version}</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>${findbugs.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit5.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-bom</artifactId>
				<version>${mockito.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-bom</artifactId>
				<version>${cucumber.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${awaitility.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>21</source>
						<target>21</target>
						<debug>true</debug>
						<optimize>true</optimize>
						<compilerArgs>
							<arg>--enable-preview</arg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.0</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>dist</directory>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.3.0</version>
					<configuration>
						<verbose>false</verbose>
						<canUpdateCopyright>true</canUpdateCopyright>
						<canUpdateDescription>true</canUpdateDescription>
					</configuration>
					<executions>
						<execution>
							<id>add-third-party</id>
							<goals>
								<goal>add-third-party</goal>
							</goals>
						</execution>
						<execution>
							<id>second</id>
							<goals>
								<goal>update-file-header</goal>
							</goals>
							<phase>process-sources</phase>
							<configuration>
								<licenseName>apache_v2</licenseName>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.2</version>
					<configuration>
						<argLine>@{argLine} -Dfile.encoding=UTF-8 --enable-preview</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.11</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.4.1</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<!-- Child projects shouldn't inherit this as we just need to
				check this once -->
				<inherited>false</inherited>
				<configuration>
					<!-- Run `mvn enforcer:display-info` to get the current
					configurations -->
					<rules>
						<requireMavenVersion>
							<version>3.8.1</version>
						</requireMavenVersion>
						<requireJavaVersion>
							<version>21</version>
						</requireJavaVersion>
						<requireJavaVendor>
							<includes>
								<include>Eclipse Adoptium</include>
							</includes>
						</requireJavaVendor>
					</rules>
				</configuration>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<!-- select non-aggregate reports -->
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>